--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -6,22 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="temp"
-        android:textAlignment="center"
-        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="@string/day"
+        android:textSize="15sp" />
+
+
+    <TextView
+        android:id="@+id/tem"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:text="@string/temp"
         android:textAlignment="center"
-        android:text="time"
-        android:textSize="20sp" />
+        android:textSize="15sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/icon"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
 </LinearLayout>
